[gd_scene format=3 uid="uid://blam7n4qp2x5v"]

[ext_resource type="Script" uid="uid://ckilyimgod8qk" path="res://scripts/ui/team_select_dialog.gd" id="1_dialog"]

[node name="TeamSelectDialog" type="Control" unique_id=1137062011]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_dialog")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1842270009]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.05, 0.75)

[node name="GlowEffect" type="ColorRect" parent="." unique_id=2047189722]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.0
offset_top = -358.0
offset_right = 408.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.12)

[node name="BorderOuter" type="ColorRect" parent="." unique_id=1634907669]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -354.0
offset_right = 404.0
offset_bottom = 354.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=303257792]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundGradient" type="ColorRect" parent="PanelContainer" unique_id=877181330]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.04, 0.08, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer" unique_id=217420984]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer" unique_id=485260630]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=946400176]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="LeftDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=1581197051]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=468054067]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_font_sizes/font_size = 24
text = "[ SELECT AWAY TEAM ]"
horizontal_alignment = 1

[node name="RightDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer" unique_id=2001750636]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.5)

[node name="DescLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=400890530]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Choose 2 additional officers to deploy."
horizontal_alignment = 1

[node name="CaptainLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1573623901]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "CAPTAIN - Always Deployed"
horizontal_alignment = 1

[node name="HSeparator" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=663641037]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=875610425]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="OfficerContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer" unique_id=1909281817]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 8

[node name="HSeparator2" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=522381121]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.3)

[node name="SelectedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1374793668]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
theme_override_font_sizes/font_size = 18
text = "SELECTED: 0 / 2"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer" unique_id=1527234983]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1079053399]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.3, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.4, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "[ CANCEL ]"

[node name="DeployButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ButtonContainer" unique_id=1883616886]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.5, 1)
theme_override_colors/font_hover_color = Color(0.4, 1, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "[ DEPLOY ]"

[node name="CornerTL" type="ColorRect" parent="." unique_id=766320743]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -350.0
offset_right = -392.0
offset_bottom = -342.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)

[node name="CornerTR" type="ColorRect" parent="." unique_id=157104663]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 392.0
offset_top = -350.0
offset_right = 400.0
offset_bottom = -342.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)

[node name="CornerBL" type="ColorRect" parent="." unique_id=2064860018]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 342.0
offset_right = -392.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)

[node name="CornerBR" type="ColorRect" parent="." unique_id=1033935084]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 392.0
offset_top = 342.0
offset_right = 400.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.4, 0.9, 1, 0.8)
